syntax = "proto3";

package evented.eventHandler;
option go_package = "eventhandler;evented_eventhandler";


import "core/evented.proto";

service EventHandler {
    rpc HandleSync (evented.core.EventBook) returns (evented.core.EventBook) {
    }
}